# flashmoe_gb10

./: .gitignore  README.md
docs/: gb10_moe_hardware_requirements_report.md
ds4_gb10/: Makefile  ds4.c  ds4.h  ds4_cli.c  ds4_cuda.cu  ds4_gpu.h  flashmoe_backend.c  flashmoe_backend.h
ds4_gb10/speed-bench/: plot_speed.py
ds4_gb10/tests/: generate_long_context_story_prompt.py  runtime_case_qa.txt
ds4_gb10/tools/: analyze_runtime_monitor.py  plot_runtime_monitor.py  plot_runtime_monitor.sh  run_e2e_bench.sh  run_runtime_case.sh
gb10_flashmoe/: CMakeLists.txt  README.md
gb10_flashmoe/docs/: current-status-onepager.md  dedicated-runtime-blueprint.md  flashmoe-analysis.md  vllm-integration.md
gb10_flashmoe/include/flashmoe/: cache_policy.h  compute_profile.h  decode_harness.h  decode_state.h  dense_artifact.h  dense_decode.h  dense_operator_chain.h  dense_resident_loader.h  device_path.h  expert_cache.h  expert_cuda_backend.h  expert_operator_chain.h  expert_store.h  expert_types.h  io_pool.h  kv_cache.h  model_spec.h  online_runtime.h  pipeline_model.h  router_runtime.h  runtime_plan.h  streamed_engine.h  streamed_runtime.h  streamed_service.h  tokenizer_artifact.h
gb10_flashmoe/python/: benchmark_fused_moe.py  build_cuda_extension.py  pyproject.toml  serve_with_vllm.py
gb10_flashmoe/python/csrc/: flashmoe_ops.cpp  flashmoe_ops_cuda.cu
gb10_flashmoe/python/flashmoe_vllm_plugin/: __init__.py  ablate.py  build_cache_dataset.py  build_expert_manifest.py  config.py  custom_op.py  export_dense_runtime_artifact.py  export_qwen_experts.py  export_tokenizer_artifact.py  generate_synthetic_trace.py  init_config.py  layer_replacement.py  ops.py  plugin.py  policy.py  q3like.py  reference_cli.py  replay_streaming.py  runtime.py  streaming.py  tokenizer_bridge.py  trace_utils.py  train_policy.py  train_predictor.py  vllm_adapter.py
gb10_flashmoe/python/flashmoe_vllm_plugin/examples/: gb10_qwen395_397b.json
gb10_flashmoe/scripts/: gb10_benchmark_custom_op.sh  gb10_build_expert_manifest.sh  gb10_build_extension.sh  gb10_create_env.sh  gb10_decode_harness.sh  gb10_export_dense_artifact.sh  gb10_export_qwen_experts.sh  gb10_export_qwen_experts_chunked.sh  gb10_export_tokenizer_artifact.sh  gb10_generate_compute_profile.sh  gb10_generate_synthetic_trace.sh  gb10_init_config.sh  gb10_online_runtime_demo.sh  gb10_replay_streaming.sh  gb10_runtime_plan.sh  gb10_serve_vllm.sh  gb10_streamed_cli.sh  gb10_streamed_runtime.sh  gb10_streamed_service.sh  gb10_train_cache_policy.sh  gb10_train_predictor.sh
gb10_flashmoe/src/: compute_profile.cpp  decode_harness.cpp  decode_harness_demo.cpp  decode_state.cpp  dense_artifact.cpp  dense_decode.cpp  dense_operator_chain.cpp  dense_resident_loader.cpp  device_path.cpp  expert_cache.cpp  expert_cuda_backend.cu  expert_cuda_backend_stub.cpp  expert_operator_chain.cpp  expert_store.cpp  io_pool.cpp  kv_cache.cpp  model_spec.cpp  online_runtime.cpp  online_runtime_demo.cpp  pipeline_demo.cpp  pipeline_model.cpp  router_runtime.cpp  runtime_plan.cpp  runtime_plan_demo.cpp  streamed_cli_main.cpp  streamed_engine.cpp  streamed_runtime.cpp  streamed_runtime_demo.cpp  streamed_service.cpp  streamed_service_main.cpp  tokenizer_artifact.cpp  trace_sim.cpp
